2006-04-07  Derek Price  <derek@ximbiot.com>

	Import strtoumax module from GNULIB.
	* strtoimax.m4, strtoll.m4, strtoull.m4, strtoumax.m4: New files.
	* bison.m4, mbiter.m4: Updated.

2006-03-30  Mark D. Baushke  <mdb@gnu.org>

	* regex.m4: Update from GNULIB.

2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* clock_time.m4, extensions.m4, getaddrinfo.m4, gnulib-comp.m4,
	nanosleep.m4, regex.m4, socklen.m4, sys_socket_h.m4, timespec.m4,
	unistd_h.m4: Update from GNULIB.

2006-01-26  Mark D. Baushke  <mdb@gnu.org>

	* stdbool.m4: Update from GNULIB.

2006-01-25  Mark D. Baushke  <mdb@gnu.org>

	* fpending.m4, getopt.m4, gnulib-comp.m4, openat.m4, socklen.m4,
	stdbool.m4, stdint.m4, sys_socket_h.m4: Update from GNULIB.

2005-12-31  Mark D. Baushke  <mdb@gnu.org>

	* gnulib-comp.m4: Update from GNULIB.

	* bison.m4: Merge copyright update from GNULIB.

2005-12-07  Mark D. Baushke  <mdb@gnu.org>

	* regex.m4, socklen.m4: Update from GNULIB.

2005-11-27  Mark D. Baushke  <mdb@gnu.org>

	* chdir-long.m4, fpending.m4, gnulib-comp.m4, mbiter.m4: Update
	from GNULIB.

2005-10-20  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.
	* getaddrinfo.m4, md5.m4, stdbool.m4: Updated.
	* uint32_t.m4: Removed.

2005-10-03  Derek Price  <derek@ximbiot.com>

	* fcntl-safer.m4, socklen.m4: New files from GNULIB.
	* canonicalize.m4, chdir-long.m4, dup2.m4, fnmatch.m4, ftruncate.m4,
	getaddrinfo.m4, getcwd.m4, getdate.m4, getpagesize.m4, gnulib-comp.m4,
	mbchar.m4, mbiter.m4, mkstemp.m4, mktime.m4, nanosleep.m4, openat.m4,
	pathmax.m4, regex.m4, save-cwd.m4, strcase.m4, strstr.m4,
	unistd-safer.m4, xgetcwd.m4, xreadlink.m4: Update from GNULIB.

2005-09-26  Derek Price  <derek@ximbiot.com>

	[bug #14639]
	* acx_with_gssapi.m4: Find the crypto library on FreeBSD 5.x.
	Patch from Serguei E. Leontiev <lse@CryptoPro.ru>.

2005-09-25  Derek Price  <derek@ximbiot.com>

	* lstat.m4: Update from GNULIB.

2005-09-19  Derek Price  <derek@ximbiot.com>

	Update from GNULIB.