@@ -14,10 +14,10 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --aux-dir=build-aux --macro-prefix=gl allocsa atexit canon-host canonicalize closeout dirname dup2 error exit exitfail extensions fnmatch fnmatch-posix ftruncate getdate gethostname getline getlogin_r getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday glob lstat malloc md5 memmove minmax mkdir mkstemp mktime nanosleep pagealign_alloc pathmax quotearg readlink realloc regex rename restrict save-cwd setenv stat-macros stdbool stdint strcase strdup strerror strftime strstr strtoul strtoumax time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc-die xgethostname xreadlink xsize yesno
+#   gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --aux-dir=build-aux --macro-prefix=gl allocsa atexit canon-host canonicalize closeout dirname dup2 error exit exitfail extensions fnmatch fnmatch-posix ftruncate getdate gethostname getline getlogin_r getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday glob inttypes lstat malloc md5 memmove minmax mkdir mkstemp mktime nanosleep pagealign_alloc pathmax quotearg readlink realloc regex rename restrict save-cwd setenv stat-macros stdbool stdint strcase strdup strerror strftime strstr strtoul strtoumax time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc-die xgethostname xreadlink xsize yesno
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
-gl_MODULES([allocsa atexit canon-host canonicalize closeout dirname dup2 error exit exitfail extensions fnmatch fnmatch-posix ftruncate getdate gethostname getline getlogin_r getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday glob lstat malloc md5 memmove minmax mkdir mkstemp mktime nanosleep pagealign_alloc pathmax quotearg readlink realloc regex rename restrict save-cwd setenv stat-macros stdbool stdint strcase strdup strerror strftime strstr strtoul strtoumax time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc-die xgethostname xreadlink xsize yesno])
+gl_MODULES([allocsa atexit canon-host canonicalize closeout dirname dup2 error exit exitfail extensions fnmatch fnmatch-posix ftruncate getdate gethostname getline getlogin_r getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday glob inttypes lstat malloc md5 memmove minmax mkdir mkstemp mktime nanosleep pagealign_alloc pathmax quotearg readlink realloc regex rename restrict save-cwd setenv stat-macros stdbool stdint strcase strdup strerror strftime strstr strtoul strtoumax time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc-die xgethostname xreadlink xsize yesno])
 gl_AVOID([])
 gl_SOURCE_BASE([lib])
 gl_M4_BASE([m4])
